Fixed imbedded YouTube video glitch on mobile

--- a/study.css
+++ b/study.css
@@ -257,4 +257,12 @@ footer {
         margin-top: 40px;
         margin-bottom: -30px;
     }
+
+    iframe {
+        border: none;
+        margin-top: 40px;
+        width: 350px;
+        height: 190px;
+        box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+    }
 }
